# vectorstorm

./: .gitmodules  CMakeLists.txt  DOCS  LICENSE  PROGRESS.TXT  README  VS_Config.h.in  VS_VectorStorm.h  VS_VectorStorm_Debug.h  external.cmake  glew.c  stdafx.cpp
Data/VS/shaders/: default_f.glsl  default_v.glsl
Data/shaders/: default_f.glsl  default_v.glsl
GL/: eglew.h  glew.c  glxew.h
VS/: VS_DisableDebugNew.h  VS_EnableDebugNew.h  VS_Headers.h  VS_OpenGL.cpp  VS_OpenGL.h  VS_Prefix.h  VS_Prefix_Debug.h
VS/Core/: CORE_Game.cpp  CORE_Game.h  CORE_GameMode.cpp  CORE_GameMode.h  CORE_GameRegistry.cpp  CORE_GameRegistry.h  CORE_GameSystem.cpp  CORE_GameSystem.h  Core.cpp  Core.h
VS/Files/: VS_Archive.cpp  VS_Archive.h  VS_File.cpp  VS_File.h  VS_FileCache.cpp  VS_FileCache.h  VS_PhysFS.cpp  VS_PhysFS.h  VS_Record.cpp  VS_Record.h  VS_RecordReader.cpp  VS_RecordReader.h  VS_RecordStream.cpp  VS_RecordStream.h  VS_RecordWriter.cpp  VS_RecordWriter.h  VS_Token.cpp  VS_Token.h
VS/Graphics/: VS_AttributeBinding.cpp  VS_AttributeBinding.h  VS_BuiltInFont.cpp  VS_BuiltInFont.h  VS_Camera.cpp  VS_Camera.h  VS_Color.cpp  VS_Color.h  VS_DisplayList.cpp  VS_DisplayList.h  VS_DynamicBatch.cpp  VS_DynamicBatch.h  VS_DynamicBatchManager.cpp  VS_DynamicBatchManager.h  VS_DynamicMaterial.cpp  VS_DynamicMaterial.h  VS_Entity.cpp  VS_Entity.h  VS_Fog.cpp  VS_Fog.h  VS_Font.cpp  VS_Font.h  VS_FontRenderer.cpp  VS_FontRenderer.h  VS_Fragment.cpp  VS_Fragment.h  VS_Light.cpp  VS_Light.h  VS_Lines.cpp  VS_Lines.h  VS_Material.cpp  VS_Material.h  VS_MaterialInternal.cpp  VS_MaterialInternal.h  VS_MaterialManager.cpp  VS_MaterialManager.h  VS_Mesh.cpp  VS_Mesh.h  VS_Model.cpp  VS_Model.h  (+88 more)
VS/Input/: VS_Input.cpp  VS_Input.h
VS/Math/: VS_Angle.cpp  VS_Angle.h  VS_Box.cpp  VS_Box.h  VS_EulerAngles.cpp  VS_EulerAngles.h  VS_Frustum.cpp  VS_Frustum.h  VS_Math.cpp  VS_Math.h  VS_Matrix.cpp  VS_Matrix.h  VS_Perlin.cpp  VS_Perlin.h  VS_Quaternion.cpp  VS_Quaternion.h  VS_Random.cpp  VS_Random.h  VS_Span.cpp  VS_Span.h  VS_Spline.cpp  VS_Spline.h  VS_Transform.cpp  VS_Transform.h  VS_Vector.cpp  VS_Vector.h
VS/Math/MT/: SFMT-params.h  SFMT.cpp
VS/Memory/: VS_Heap.cpp  VS_Heap.h  VS_Serialiser.cpp  VS_Serialiser.h  VS_Store.cpp  VS_Store.h
VS/Network/: VS_NetClient.cpp  VS_NetClient.h  VS_Socket.cpp  VS_Socket.h  VS_SocketTCP.cpp  VS_SocketTCP.h
VS/Physics/: VS_CollisionObject.cpp  VS_CollisionObject.h  VS_CollisionSprite.cpp  VS_CollisionSprite.h  VS_CollisionSystem.cpp  VS_CollisionSystem.h  VS_PhysicsEmitter.cpp  VS_PhysicsEmitter.h  VS_PhysicsSprite.cpp  VS_PhysicsSprite.h
VS/Sound/: VS_Music.cpp  VS_Music.h  VS_SoundSample.cpp  VS_SoundSample.h  VS_SoundSystem.cpp  VS_SoundSystem.h
VS/Threads/: VS_Mutex.cpp  VS_Mutex.h  VS_Semaphore.cpp  VS_Semaphore.h  VS_Spinlock.cpp  VS_Spinlock.h  VS_Task.cpp  VS_Task.h  VS_Thread.cpp  VS_Thread.h
VS/Utils/: VS_Array.h  VS_ArrayStore.h  VS_AutomaticInstanceList.h  VS_Backtrace.cpp  VS_Backtrace.h  VS_Cache.cpp  VS_Cache.h  VS_Debug.cpp  VS_Debug.h  VS_Demangle.cpp  VS_Demangle.h  VS_Factory.cpp  VS_Factory.h  VS_FloatImage.cpp  VS_FloatImage.h  VS_FontMaker.cpp  VS_FontMaker.h  VS_GraphicsMemoryProfiler.cpp  VS_GraphicsMemoryProfiler.h  VS_HalfFloatImage.cpp  VS_HalfFloatImage.h  VS_HalfIntImage.cpp  VS_HalfIntImage.h  VS_HashTable.cpp  VS_HashTable.h  VS_HashTableStore.cpp  VS_HashTableStore.h  VS_Image.cpp  VS_Image.h  VS_IntHashTable.cpp  VS_IntHashTable.h  VS_LinkedList.h  VS_LinkedListStore.h  VS_LocString.cpp  VS_LocString.h  VS_LocalisationTable.cpp  VS_LocalisationTable.h  VS_Log.cpp  VS_Log.h  VS_MemoryProfiler.cpp  (+46 more)
VS/Utils/stb/: stb.cpp  stb_image_write.h
VS/Utils/uni-algo/: source.txt
iOS/: EAGLView.h  EAGLView.m  ES1Renderer.h  ES1Renderer.m  ES2Renderer.h  ES2Renderer.m  ESRenderer.h  Info.plist  MainWindow-iPad.xib  MainWindow.xib  SprattIPhoneAppDelegate.h  SprattIPhoneAppDelegate.m  VectorStormIPhoneAppDelegate.h  VectorStormIPhoneAppDelegate.m  VectorStormIPhone_Prefix.pch  Wedge.cpp  Wedge.h  main.m
tracy/: TracyClient.cpp
tracy/client/: TracyCallstack.cpp  TracyDebug.hpp  TracyProfiler.cpp  TracySysPower.cpp  TracySysTrace.cpp  tracy_rpmalloc.cpp
